# ChangeLog for kde-base/kdegames
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdegames/Attic/ChangeLog,v 1.34 2003/05/20 23:25:29 weeve Exp $

  20 May 2003; Jason Wever <weeve@gentoo.org> kdegames-3.1.2.ebuild:
  Changed ~sparc keyword to sparc.

*kdegames-3.1.2 (19 May 2003)

  19 May 2003; Dan Armak <danarmak@gentoo.org> kdegames-3.1.2.ebuild:
  New version of KDE.

  28 Apr 2003; Lars Weiler <pylon@gentoo.org> kdegames-3.1.1.ebuild:
  Set ppc in KEYWORDS

*kdegames-3.0.5b (08 Apr 2003)

  08 Apr 2003; Hannes Mehnert <hannes@gentoo.org> kdegames-3.0.5b.ebuild,
  files/kdegames-3.0.5b-gentoo.diff:
  A security patch release fixing a kghostview vulnerability. See GLSA.
  Also includes misc other fixes.

*kdegames-3.1.1 (14 Mar 2003)

  19 Mar 2003; Jason Wever <weeve@gentoo.org> kdegames-3.1.1.ebuild:
  Changed ~sparc keyword to sparc.

  14 Mar 2003; Hannes Mehnert <hannes@gentoo.org> kdegames-3.1.1.ebuild:
  version bump

*kdegames-3.1 (01 Feb 2003)

  28 Feb 2003; Will Woods <wwoods@gentoo.org> kdegames-3.1.ebuild:
  Hack to build without kmines on alpha, due to linker problems.
  Removed previous patch which tried to fix this.
  Added ~alpha keyword.

  15 Feb 2003; Jason Wever <weeve@gentoo.org> kdegames-3.1.ebuild:
  Changed ~sparc keyword to sparc.

  12 Feb 2003; Hannes Mehnert <hannes@gentoo.org> kdegames-2.2.2.ebuild,
  kdegames-3.0.2.ebuild, kdegames-3.0.3.ebuild, kdegames-3.1_rc6.ebuild:
  removed old ebuilds

  01 Feb 2003; Jack Morgan <jmorgan@gentoo.org> kdegames-3.1.ebuild:
  added ~sparc to keyword

  30 Jan 2003; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Change ebuilds to use kde_src_unpack() instead of base_src_unpack(). This
  does not affect in any way the compiled output, or any ebuild not suffering
  rfom the 'languageChange undeclared' bug, which it fixes.

*kdegames-2.2.2-r1 (17 Jan 2003)
